force-app/main/default/objects/AO_Email_Template_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>Contains the Business Unit Information for the email to be sent</description>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monash_Led</fullName>
                    <default>true</default>
                    <label>Monash_Led</label>
                </value>
                <value>
                    <fullName>Partner_Led</fullName>
                </value>
                <value>
                    <fullName>Study_Tours_GCE_GWIL</fullName>
                </value>
                <value>
                    <fullName>Study_Tours_GIG_GST</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Sent_to__c</fullName>
        <label>Email Sent To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Students</fullName>
                    <default>true</default>
                    <label>Students</label>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>MUM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Template__c</fullName>
        <label>Email Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                    <default>true</default>
                    <label>Accepted</label>
                </value>
                <value>
                    <fullName>Accepted by Host Institution</fullName>
                </value>
                <value>
                    <fullName>Accepted Pending Study Plan Approval</fullName>
                </value>
                <value>
                    <fullName>Allocated</fullName>
                </value>
                <value>
                    <fullName>Approved for Travel</fullName>
                </value>
                <value>
                    <fullName>Awaiting Response Host Institution</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Conditionally Allocated</fullName>
                </value>
                <value>
                    <fullName>Conditionally Approved</fullName>
                </value>
                <value>
                    <fullName>Conditionally Nominated</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
                <value>
                    <fullName>Nominated</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Short-listed</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Successful</fullName>
                </value>
                <value>
                    <fullName>Transcript Sent to Faculty/school</fullName>
                </value>
                <value>
                    <fullName>Under Assessment by Faculty</fullName>
                </value>
                <value>
                    <fullName>Unsuccessful</fullName>
                </value>
                <value>
                    <fullName>Waitlist</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Withdrawn (with Penalty)</fullName>
                </value>
                <value>
                    <fullName>Withdrawn (post-registration)</fullName>
                </value>
                <value>
                    <fullName>Withdrawn (post-commencement)</fullName>
                </value>
                <value>
                    <fullName>Eligible</fullName>
                    <isActive>false</isActive>
                    <label>Eligible</label>
                </value>
                <value>
                    <fullName>Transcript Received</fullName>
                    <isActive>false</isActive>
                    <label>Transcript Received</label>
                </value>
                <value>
                    <fullName>Withdrawn (Post - registration)</fullName>
                    <isActive>false</isActive>
                    <label>Withdrawn (Post - registration)</label>
                </value>
                <value>
                    <fullName>Withdrawn (Post- Commencement)</fullName>
                    <isActive>false</isActive>
                    <label>Withdrawn (Post- Commencement)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Email Template Mapping</label>
    <pluralLabel>Email Template Mappings</pluralLabel>
</CustomObject>